--- a/style.css
+++ b/style.css
@@ -646,3 +646,48 @@ tr, .tableRow {
     width: 30vw;
     height: 15em;
 }
+
+.duplicators.unlocked {
+    color: rgb(0, 0, 0);
+    background: radial-gradient(rgb(0, 234, 255), rgb(153, 241, 255));
+    border: 2px solid rgba(255, 255, 255, 0.4);
+    padding: 5px 5px 5px 5px;
+}
+
+.duplicators.locked {
+    color: white;
+    background: radial-gradient(rgb(71, 106, 133), rgb(54, 73, 99));
+    border: 2px solid rgba(255, 0, 0, 0.5);
+    padding: 5px 5px 5px 5px;
+}
+
+.duplicators.locked:hover {
+    filter: sepia(100%) saturate(300%) brightness(70%) hue-rotate(-45deg);
+}
+
+.duplicators.bought {
+    background: radial-gradient(rgb(0, 204, 167), rgb(0, 153, 133));
+    border: 2px solid rgba(76, 255, 5, 0.4);
+    padding: 5px 5px 5px 5px;
+    filter: sepia(100%) saturate(300%) hue-rotate(45deg);
+    color: white;
+}
+
+.duplicators.shadow {
+    color: rgb(206, 205, 255);
+    text-shadow: 0.166667em 0.166667em 0.3333333em rgb(41, 177, 179), 0.3333333em 0.3333333em 0.66666667em rgb(43, 173, 156);
+}
+
+.dupDiv { 
+    background-color: rgb(27, 45, 46);
+    color: rgb(189, 253, 255);
+    text-shadow: 0.1em 0.1em 0.2em rgb(41, 139, 133), 0.2em 0.2em 0.4em rgb(43, 149, 126);
+    width: 100%;
+    padding: 1em;
+}
+
+.dupDiv.bought {
+    background-color: rgb(0, 71, 60);
+    color: rgb(189, 255, 232);
+    text-shadow: 0.1em 0.1em 0.2em rgb(69, 255, 243), 0.2em 0.2em 0.4em rgb(77, 255, 216);
+}
