--- a/style.css
+++ b/style.css
@@ -583,6 +583,10 @@ tr, .tableRow {
     padding: 5px 5px 5px 5px;
 }
 
+.wide {
+    width: 100%;
+}
+
 .smol {
     transform: scale(90%);
     filter: sepia(60%);
